test_scripts/semantic_errors/arithmetic_type_error.sp
int result = 5 + true;
